# stream-analytics

./: .cursorrules  .dockerignore  .gitignore  .gitleaks.toml  .golangci.yml  .pre-commit-config.yaml  .yamllint.yaml  404.html  AGENTS.md  CLAUDE.md  CODEX.md  Dockerfile  LICENSE  Makefile  README.md  TODO  docker-compose.yml  go.work  go.work.sum  index.html  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  sitemap.xml  tmp_shardcheck.go
.benchmarks/: baseline.txt  budgets.txt
.claude/: mcp_servers.json
.codex/: instructions.md
.context/: ARCHIVE-PLAN.md  README.md
.github/: copilot-instructions.md
CONTRIBUTING/: index.html
SUMMARY/: index.html
adrs/: index.html
architecture/: index.html
client/: .gitignore  Makefile  TLS_PROXY.md  ols.json
development-workflow/: index.html
doc-contract-template/: index.html
docs/: CONTRIBUTING.md  README.md  client-architecture.md  client-roadmap-6.8-to-8.0.md  development-workflow.md  local-dev.md  product-definition.md  refactor-stage-close.md  testing-strategy.md  week-2-canonical-consolidation.md
local-dev/: index.html
migrations/: 001_orderbook_tables.sql  002_artifact_tables.sql
product-definition/: index.html
proto/: buf.gen.yaml  buf.yaml  registry.json
scripts/: README.md  bench-budget.sh  bench-check.sh  changed-go-modules.sh  check-doc-links.sh  check-domain-isolation.sh  check-feature-pack-links.sh  check-metrics-unstaged.sh  check-operability.sh  check-pack-subjects-vs-event-bus.sh  check-pack-subjects.sh  check-registry.sh  check-truth-map.sh  ci-local.sh  (+20 more)
(+2556 files in other folders)
