[project]
name = "stream-analytics-docs"
version = "0.1.0"
description = "MkDocs documentation site for Stream Analytics"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.47",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-include-markdown-plugin>=6.2.2",
    "pyyaml>=6.0.2",
]

[tool.uv]
package = false
